get all elements when size 0 and fix add cart in product details